test/scc_test/decl/semantic-errors/003.t
extern int a;
extern float a;